Update Experience and Hackathons sections with actual resume content

--- a/index.html
+++ b/index.html
@@ -258,26 +258,53 @@
 									<div class="resume-content">
 										<!-- Experience Section (Default Active) -->
 										<div id="experience-content" class="resume-section active" style="display: block; padding: 2em; border: 2px solid #f56a6a; border-radius: 10px; background: rgba(245, 106, 106, 0.05);">
-											<h3 style="color: #f56a6a; margin-bottom: 1em;">Work Experience</h3>
+											<h3 style="color: #f56a6a; margin-bottom: 1em;">Relevant Experience</h3>
 											<div style="margin-bottom: 2em;">
-												<h4 style="margin-bottom: 0.5em; color: #333;">Software Engineer Intern</h4>
-												<p style="margin-bottom: 0.5em; color: #666; font-style: italic;">Company Name • Summer 2024</p>
+												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 0.5em;">
+													<h4 style="margin: 0; color: #333;">Software Engineering Intern</h4>
+													<span style="color: #666; font-style: italic;">Buffalo, NY</span>
+												</div>
+												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1em;">
+													<p style="margin: 0; color: #666; font-style: italic;">Finta</p>
+													<span style="color: #666; font-style: italic;">June 2025 – August 2025</span>
+												</div>
 												<ul style="margin-left: 1.5em; color: #555;">
-													<li>Developed and maintained web applications using modern frameworks</li>
-													<li>Collaborated with cross-functional teams on product development</li>
-													<li>Implemented efficient algorithms and data structures</li>
+													<li>Engineered a Chrome Extension sidepanel Chatbot (Manifest V3) in Javascript/Typescript that enables users to chat with a fundraising AI copilot, streamlining research and outreach workflows</li>
+													<li>Built a LangChain tool that allows the sidepanel to read and interpret page content, giving the chatbot better context for user interactions</li>
+													<li>Implemented OAuth 2.0 with Firebase Authentication for session management and secure token refresh</li>
+												</ul>
+											</div>
+											<div style="margin-bottom: 2em;">
+												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 0.5em;">
+													<h4 style="margin: 0; color: #333;">Software Engineering Intern</h4>
+													<span style="color: #666; font-style: italic;">South Plainfield, NJ</span>
+												</div>
+												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1em;">
+													<p style="margin: 0; color: #666; font-style: italic;">EdQuill</p>
+													<span style="color: #666; font-style: italic;">June 2024 – August 2024</span>
+												</div>
+												<ul style="margin-left: 1.5em; color: #555;">
+													<li>Deployed ML driven recommendation models (TensorFlow, scikit-learn) on AWS Lambda/EC2, improving content personalization</li>
+													<li>Optimized API performance by redesigning request handling and caching strategies, reducing response latency and boosting system reliability for LMS integrations</li>
+													<li>Standardized CI/CD workflows in Jenkins and GitHub Actions, automating testing and deployments, which cut release cycles</li>
 												</ul>
 											</div>
 											<div>
-												<h4 style="margin-bottom: 0.5em; color: #333;">Research Assistant</h4>
-												<p style="margin-bottom: 0.5em; color: #666; font-style: italic;">Rutgers University • 2023-Present</p>
+												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 0.5em;">
+													<h4 style="margin: 0; color: #333;">Software Engineering Intern</h4>
+													<span style="color: #666; font-style: italic;">Remote</span>
+												</div>
+												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1em;">
+													<p style="margin: 0; color: #666; font-style: italic;">ThinkingScape</p>
+													<span style="color: #666; font-style: italic;">June 2023 - August 2023</span>
+												</div>
 												<ul style="margin-left: 1.5em; color: #555;">
-													<li>Conducted research in machine learning and data analysis</li>
-													<li>Published findings in academic conferences</li>
-													<li>Mentored undergraduate students in research methodologies</li>
+													<li>Optimized backend APIs and database queries (PostgreSQL/Express) to reduce page load times and improve SEO, resulting in a 20% increase in search rankings and faster accessibility for a broader user base</li>
+													<li>Designed UI/UX Figma Mockups to collaborate with stakeholders and get product feedback</li>
+													<li>Integrated A/B testing into the website to evaluate design changes, user flows, and gather behavioral insights</li>
 												</ul>
-						</div>
-					</div>
+											</div>
+										</div>
 
 										<!-- Education Section -->
 										<div id="education-content" class="resume-section" style="display: none; padding: 2em; border: 2px solid #f56a6a; border-radius: 10px; background: rgba(245, 106, 106, 0.05);">
@@ -292,16 +319,22 @@
 										
 										<!-- Hackathons Section -->
 										<div id="hackathons-content" class="resume-section" style="display: none; padding: 2em; border: 2px solid #f56a6a; border-radius: 10px; background: rgba(245, 106, 106, 0.05);">
-											<h3 style="color: #f56a6a; margin-bottom: 1em;">Hackathons & Competitions</h3>
+											<h3 style="color: #f56a6a; margin-bottom: 1em;">Hackathon Projects</h3>
 											<div style="margin-bottom: 2em;">
-												<h4 style="margin-bottom: 0.5em; color: #333;">HackRU Fall 2024</h4>
-												<p style="margin-bottom: 0.5em; color: #666; font-style: italic;">1st Place Winner</p>
-												<p style="color: #555;">Developed an AI-powered solution for sustainable energy management</p>
+												<h4 style="margin-bottom: 0.5em; color: #333;">BitCamp - UMD's Hackathon - Financial Advisor AI Platform</h4>
+												<ul style="margin-left: 1.5em; color: #555;">
+													<li>Developed a full-stack web application using React.js for the interface, Django REST API for user financial data management, and Flask/Express for backend operations and session handling</li>
+													<li>Integrated LangChain with the REST API to analyze user expenses and provide personalized financial insights, improving accuracy</li>
+													<li>Implemented Azure Speech SDK to enable voice-based interactions, allowing users to input through speech recognition and receive real-time responses with text to speech transcription</li>
+												</ul>
 											</div>
 											<div>
-												<h4 style="margin-bottom: 0.5em; color: #333;">Google Code Jam</h4>
-												<p style="margin-bottom: 0.5em; color: #666; font-style: italic;">Top 500 Globally</p>
-												<p style="color: #555;">Competed in algorithmic programming challenges</p>
+												<h4 style="margin-bottom: 0.5em; color: #333;">HopHacks - Johns Hopkins Hackathon - Medical Transcriber / Error Prevention</h4>
+												<ul style="margin-left: 1.5em; color: #555;">
+													<li>Architected an AI-powered healthcare monitoring system using Whisper locally for low latency speech recognition and Spacy for NLP</li>
+													<li>Engineered a 3D post-operative patient engagement interface with Spline, enhancing recovery experience and medical outcome tracking</li>
+													<li>Built a contradiction detection algorithm using ML models to analyze patient-doctor dialogues, reducing medication and surgery errors</li>
+												</ul>
 											</div>
 										</div>
 										
