--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
 													<span style="color: #666; font-style: italic;">June 2022 - August 2022</span>
 												</div>
 												<ul style="margin-left: 1.5em; color: #555;">
-													<li>Improved website SEO to better visibility, increasing traffic by 25% through keywords and CPC analysis</li>
-													<li>Analyzed digital metrics to enhance Google rankings, boosting visibility by 15% and driving engagement</li>
-													<li>Studied Amazon's marketing strategy, identifying tactics that boosted campaign performance by 10%</li>
+													<li>Improved website SEO to enhance visibility and organic reach, increasing traffic through strategic keyword research, content optimization, and CPC trend analysis</li>
+													<li>Analyzed digital performance metrics to refine SEO and SEM campaigns, enhancing Google search rankings, boosting visibility, and driving higher user engagement across platforms</li>
+													<li>Studied and evaluated Amazon's marketing strategy, identifying data-driven tactics and campaign structures that boosted overall performance and provided insights for replicable growth</li>
 												</ul>
 											</div>
 										</div>
