--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 											<div>
 												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 0.5em;">
 													<h4 style="margin: 0; color: #333;">Digital Marketing and Data Analyst Intern</h4>
-													<span style="color: #666; font-style: italic;">Jersey City, New Jersey</span>
+													<span style="color: #666; font-style: italic;">Jersey City, NJ</span>
 												</div>
 												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 1em;">
 													<p style="margin: 0; color: #666; font-style: italic;">IQuanti</p>
