Update Education section with complete coursework and Professional Skills section with comprehensive technical skills from resume

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 												<ul style="margin-left: 1.5em; color: #555; margin-bottom: 1em;">
 													<li><strong>Awards:</strong> Dean's List (Fall 2023, Spring 2024, Fall 2024, Spring 2025)</li>
 												</ul>
-												<p style="color: #555;"><strong>Relevant Coursework:</strong> Data Structures, Introduction to Discrete Structures I & II, Design and Analysis of Computer Algorithms, Intermediate Macroeconomic Analysis, Intermediate Microeconomic Analysis, Econometrics</p>
+												<p style="color: #555;"><strong>Relevant Coursework:</strong> Data Structures, Introduction to Discrete Structures I & II, Design and Analysis of Computer Algorithms, Computer Architecture, Software Methodology, Econometrics, Linear Algebra, Intermediate Macroeconomic Analysis, Intermediate Microeconomic Analysis</p>
 											</div>
 										</div>
 										
@@ -363,22 +363,21 @@
 										
 										<!-- Professional Skills Section -->
 										<div id="skills-content" class="resume-section" style="display: none; padding: 2em; border: 2px solid #f56a6a; border-radius: 10px; background: rgba(245, 106, 106, 0.05);">
-											<h3 style="color: #f56a6a; margin-bottom: 1em;">Professional Skills</h3>
+											<h3 style="color: #f56a6a; margin-bottom: 1em;">Skills, Languages, & Dev Tools</h3>
 											<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2em;">
 												<div>
-													<h4 style="margin-bottom: 1em; color: #333;">Programming Languages</h4>
+													<h4 style="margin-bottom: 1em; color: #333;">Languages/Frameworks</h4>
 													<ul style="margin-left: 1.5em; color: #555;">
-														<li>Java, Python, C/C++</li>
-														<li>JavaScript, TypeScript</li>
-														<li>SQL, R</li>
+														<li>Java, Python, JavaScript, C, HTML, CSS, R</li>
+														<li>Node.JS, Express.JS, Flask, Django, Spring Boot, FastAPI</li>
+														<li>React, TensorFlow, Scikit-Learn, PyTorch, LangChain, Spacy</li>
 									</ul>
 									</div>
 												<div>
-													<h4 style="margin-bottom: 1em; color: #333;">Technologies & Frameworks</h4>
+													<h4 style="margin-bottom: 1em; color: #333;">Tools/Cloud</h4>
 													<ul style="margin-left: 1.5em; color: #555;">
-														<li>React, Node.js, Express</li>
-														<li>Flask, Django</li>
-														<li>MongoDB, PostgreSQL</li>
+														<li>Linux, Docker, Git, Github, Eclipse, Visual Studio Code</li>
+														<li>RStudio, Firebase, Postman, AWS, GCP</li>
 									</ul>
 												</div>
 											</div>
