Reorganize Professional Skills section into 4 columns (Languages, Frameworks, Tools, Cloud) with individual bullet points for each skill

--- a/index.html
+++ b/index.html
@@ -364,21 +364,56 @@
 										<!-- Professional Skills Section -->
 										<div id="skills-content" class="resume-section" style="display: none; padding: 2em; border: 2px solid #f56a6a; border-radius: 10px; background: rgba(245, 106, 106, 0.05);">
 											<h3 style="color: #f56a6a; margin-bottom: 1em;">Skills, Languages, & Dev Tools</h3>
-											<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2em;">
+											<div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; gap: 1.5em;">
 												<div>
-													<h4 style="margin-bottom: 1em; color: #333;">Languages/Frameworks</h4>
+													<h4 style="margin-bottom: 1em; color: #333;">Languages</h4>
 													<ul style="margin-left: 1.5em; color: #555;">
-														<li>Java, Python, JavaScript, C, HTML, CSS, R</li>
-														<li>Node.JS, Express.JS, Flask, Django, Spring Boot, FastAPI</li>
-														<li>React, TensorFlow, Scikit-Learn, PyTorch, LangChain, Spacy</li>
-									</ul>
-									</div>
+														<li>Java</li>
+														<li>Python</li>
+														<li>JavaScript</li>
+														<li>C</li>
+														<li>HTML</li>
+														<li>CSS</li>
+														<li>R</li>
+													</ul>
+												</div>
 												<div>
-													<h4 style="margin-bottom: 1em; color: #333;">Tools/Cloud</h4>
+													<h4 style="margin-bottom: 1em; color: #333;">Frameworks</h4>
 													<ul style="margin-left: 1.5em; color: #555;">
-														<li>Linux, Docker, Git, Github, Eclipse, Visual Studio Code</li>
-														<li>RStudio, Firebase, Postman, AWS, GCP</li>
-									</ul>
+														<li>Node.JS</li>
+														<li>Express.JS</li>
+														<li>React</li>
+														<li>Flask</li>
+														<li>Django</li>
+														<li>Spring Boot</li>
+														<li>FastAPI</li>
+														<li>TensorFlow</li>
+														<li>Scikit-Learn</li>
+														<li>PyTorch</li>
+														<li>LangChain</li>
+														<li>Spacy</li>
+													</ul>
+												</div>
+												<div>
+													<h4 style="margin-bottom: 1em; color: #333;">Tools</h4>
+													<ul style="margin-left: 1.5em; color: #555;">
+														<li>Linux</li>
+														<li>Docker</li>
+														<li>Git</li>
+														<li>Github</li>
+														<li>Eclipse</li>
+														<li>Visual Studio Code</li>
+														<li>RStudio</li>
+														<li>Postman</li>
+													</ul>
+												</div>
+												<div>
+													<h4 style="margin-bottom: 1em; color: #333;">Cloud</h4>
+													<ul style="margin-left: 1.5em; color: #555;">
+														<li>AWS</li>
+														<li>GCP</li>
+														<li>Firebase</li>
+													</ul>
 												</div>
 											</div>
 										</div>
