Update bio section with new creative and passion-focused personal description

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 											<h1>Hi, I'm Vineeth Reddy</h1>
 											<h2>Student at Rutgers University</h2>
 										</header>
-										<p>I'm a junior at Rutgers University - New Brunswick, triple majoring in Computer Science, Data Science, and Economics. I am driven by a passion for exploring how technology can streamline processes, enhance decision-making, and solve intricate challenges across various industries. I want to apply my technical, analytical, and problem solving skills to help solve real world challenges.</p>
-										<p>In terms of career goals, I aspire to work at the intersection of software development, machine learning, and economics, leveraging data-driven insights to inform decision making and create solutions that promote sustainable growth and equitable outcomes in a rapidly evolving global economy.</p>
-										<p>I enjoy connecting with new people, especially from different backgrounds, as it allows me to exchange ideas, and gain new perspectives. Building these relationships helps me grow both personally and professionally while fostering a deeper understanding of the diverse challenges and opportunities in the world.</p>
+										<p>What excites me most about technology is its creativity: the way you can take an interest, an idea, or even a personal passion and turn it into something real through code.</p>
+										<p>That mindset has guided many of my projects. As someone who enjoys both poker and football, I've built a poker game where players face off against AI bots and an NFL match predictor that uses machine learning to forecast outcomes. Projects like these combine the analytical side of computer science with the things I love outside the classroom, showing me how technology can connect to all aspects of life.</p>
+										<p>What's been most rewarding is seeing how coding can weave into my personal passions and make them even more exciting. Now, I want to take that same creativity and apply it on a broader scale, using technology to design solutions that can impact people everywhere.</p>
 									</div>
 									<span class="image object">
 										<img src="images/vineeth-screenshot.jpg" alt="" />
@@ -318,8 +318,8 @@
 													<li>Analyzed digital performance metrics to refine SEO and SEM campaigns, enhancing Google search rankings, boosting visibility, and driving higher user engagement across platforms</li>
 													<li>Studied and evaluated Amazon's marketing strategy, identifying data-driven tactics and campaign structures that boosted overall performance and provided insights for replicable growth</li>
 												</ul>
-											</div>
-										</div>
+						</div>
+					</div>
 
 										<!-- Education Section -->
 										<div id="education-content" class="resume-section" style="display: none; padding: 2em; border: 2px solid #f56a6a; border-radius: 10px; background: rgba(245, 106, 106, 0.05);">
@@ -375,7 +375,7 @@
 														<li>HTML</li>
 														<li>CSS</li>
 														<li>R</li>
-													</ul>
+											</ul>
 												</div>
 												<div>
 													<h4 style="margin-bottom: 1em; color: #333;">Frameworks</h4>
@@ -392,7 +392,7 @@
 														<li>PyTorch</li>
 														<li>LangChain</li>
 														<li>Spacy</li>
-													</ul>
+											</ul>
 												</div>
 												<div>
 													<h4 style="margin-bottom: 1em; color: #333;">Tools</h4>
@@ -405,15 +405,15 @@
 														<li>Visual Studio Code</li>
 														<li>RStudio</li>
 														<li>Postman</li>
-													</ul>
-												</div>
+									</ul>
+									</div>
 												<div>
 													<h4 style="margin-bottom: 1em; color: #333;">Cloud</h4>
 													<ul style="margin-left: 1.5em; color: #555;">
 														<li>AWS</li>
 														<li>GCP</li>
 														<li>Firebase</li>
-													</ul>
+									</ul>
 												</div>
 											</div>
 										</div>
