Update bio with refined message about curiosity, creation, and technology's impact

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 											<h1>Hi, I'm Vineeth Reddy</h1>
 											<h2>Student at Rutgers University</h2>
 										</header>
-										<p>What excites me most about technology is its creativity: the way you can take an interest, an idea, or even a personal passion and turn it into something real through code.</p>
-										<p>That mindset has guided many of my projects. As someone who enjoys both poker and football, I've built a poker game where players face off against AI bots and an NFL match predictor that uses machine learning to forecast outcomes. Projects like these combine the analytical side of computer science with the things I love outside the classroom, showing me how technology can connect to all aspects of life.</p>
-										<p>What's been most rewarding is seeing how coding can weave into my personal passions and make them even more exciting. Now, I want to take that same creativity and apply it on a broader scale, using technology to design solutions that can impact people everywhere.</p>
+										<p>What draws me to technology is its ability to turn curiosity into creation, and being able to take an idea or passion and transform it into something tangible through code.</p>
+										<p>That mindset has shaped many of my projects. As someone who enjoys both poker and football, I've built a poker game where players face off against AI bots and an NFL match predictor that uses machine learning to forecast outcomes. These projects blend the analytical side of computer science with the things I love outside the classroom, showing me how technology can connect to all aspects of life.</p>
+										<p>The most fulfilling part has been discovering how coding can enhance my own interests and bring them to life. Moving forward, I'm excited to carry that same spirit beyond my personal projects, creating technology that not only solves problems but also enriches people's lives on a larger scale.</p>
 									</div>
 									<span class="image object">
 										<img src="images/vineeth-screenshot.jpg" alt="" />
