Fix typewriter effect: proper capitalization, remove extra spaces, and fix cursor positioning

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
 
 				// Typewriter effect for rotating text
 				const phrases = [
-					"n aspiring software engineer",
-					" student at Rutgers University", 
-					" dedicated runner",
-					" traveler and explorer",
-					" football fan",
-					" visionary"
+					"An aspiring software engineer",
+					"A student at Rutgers University", 
+					"A dedicated runner",
+					"A traveler and explorer",
+					"A football fan",
+					"A visionary"
 				];
 				
 				let currentPhraseIndex = 0;
@@ -224,7 +224,7 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I'm Vineeth Reddy</h1>
-											<h2>A<span id="rotating-text">n aspiring software engineer</span><span class="cursor">|</span></h2>
+											<h2><span id="rotating-text">An aspiring software engineer</span><span class="cursor">|</span></h2>
 										</header>
 										<p>What draws me to technology is its ability to turn curiosity into creation, and being able to take an idea or passion and transform it into something tangible through code.</p>
 										<p>That mindset has shaped many of my projects. As someone who enjoys both poker and football, I've built a poker game where players face off against AI bots and an NFL match predictor that uses machine learning to forecast outcomes. These projects blend the analytical side of computer science with the things I love outside the classroom, showing me how technology can connect to all aspects of life.</p>
