Reorder typewriter phrases: start with Student, then Software Engineer, Visionary, Runner, and duplicate Traveler

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
 
 				// Typewriter effect for rotating text
 				const phrases = [
-					"An Aspiring Software Engineer",
-					"A Student At Rutgers University", 
+					"A Student At Rutgers University",
+					"An Aspiring Software Engineer", 
+					"A Visionary",
 					"A Dedicated Runner",
 					"A Traveler And Explorer",
-					"A Football Fan",
-					"A Visionary"
+					"A Traveler And Explorer"
 				];
 				
 				let currentPhraseIndex = 0;
@@ -224,7 +224,7 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I'm Vineeth Reddy</h1>
-											<h2><span id="rotating-text">An Aspiring Software Engineer</span><span class="cursor">|</span></h2>
+											<h2><span id="rotating-text">A Student At Rutgers University</span><span class="cursor">|</span></h2>
 										</header>
 										<p>What draws me to technology is its ability to turn curiosity into creation, and being able to take an idea or passion and transform it into something tangible through code.</p>
 										<p>That mindset has shaped many of my projects. As someone who enjoys both poker and football, I've built a poker game where players face off against AI bots and an NFL match predictor that uses machine learning to forecast outcomes. These projects blend the analytical side of computer science with the things I love outside the classroom, showing me how technology can connect to all aspects of life.</p>
