Update navigation button styling: move to right, clear background with red text
- Changed buttons to transparent background with red border and text
- Added hover effect: red background with white text
- Aligned navigation buttons to the right side of header
- Maintained scale animation on hover

--- a/index.html
+++ b/index.html
@@ -85,15 +85,21 @@
 			}
 			/* Navigation button styles */
 			.nav-button {
-				background-color: #f56a6a !important;
-				border-color: #f56a6a !important;
-				color: white !important;
+				background-color: transparent !important;
+				border: 2px solid #f56a6a !important;
+				color: #f56a6a !important;
 				transition: all 0.2s ease !important;
 			}
 			.nav-button:hover {
-				background-color: #e55a5a !important;
-				border-color: #e55a5a !important;
+				background-color: #f56a6a !important;
+				border-color: #f56a6a !important;
+				color: white !important;
 				transform: scale(1.05) !important;
+			}
+			/* Header navigation alignment */
+			#header ul.actions {
+				margin-left: auto !important;
+				justify-content: flex-end !important;
 			}
 		</style>
 		<script>
