--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 				padding: 0.8em 1.5em !important;
 				font-size: 1.1em !important;
 				font-weight: 600 !important;
+				text-align: center !important;
+				display: inline-flex !important;
+				align-items: center !important;
+				justify-content: center !important;
 			}
 			.nav-button:hover {
 				background-color: #f56a6a !important;
