--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 												</div>
 												<ul style="margin-left: 1.5em; color: #555; margin-bottom: 1em;">
 													<li><strong>Awards:</strong> Dean's List (Fall 2023, Spring 2024, Fall 2024, Spring 2025)</li>
-													<li><strong>Clubs:</strong> RU Raga</li>
+													<li><strong>Clubs:</strong> RU Raga (Rutgers University Raas and Garba Association)</li>
 												</ul>
 												<p style="color: #555;"><strong>Relevant Coursework:</strong> Data Structures, Introduction to Discrete Structures I & II, Design and Analysis of Computer Algorithms, Computer Architecture, Software Methodology, Econometrics, Linear Algebra, Intermediate Macroeconomic Analysis, Intermediate Microeconomic Analysis</p>
 											</div>
