--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 														<li>Visual Studio Code</li>
 														<li>RStudio</li>
 														<li>Postman</li>
-									</ul>
+											</ul>
 									</div>
 												<div>
 													<h4 style="margin-bottom: 1em; color: #333;">Cloud</h4>
@@ -562,6 +562,13 @@
 												</div>
 											</div>
 										</div>
+									</div>
+									
+									<!-- View Resume Link -->
+									<div style="text-align: center; margin-top: 3em; padding-top: 2em; border-top: 2px solid #f0f0f0;">
+										<a href="https://drive.google.com/file/d/1uPV1EGUfNIZ0xv-ecaTi7ER3fZkdeiqN/view?usp=sharing" target="_blank" style="display: inline-block; background: #f56a6a; color: white; padding: 1.2em 2.5em; border-radius: 30px; text-decoration: none; font-size: 1.3em; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; transition: all 0.2s ease; box-shadow: 0 4px 15px rgba(245, 106, 106, 0.3);" onmouseover="this.style.background='#e55a5a'; this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(245, 106, 106, 0.4)'" onmouseout="this.style.background='#f56a6a'; this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(245, 106, 106, 0.3)'">
+											📄 View Full Resume
+										</a>
 									</div>
 								</section>
 
