Update resume button styling: smaller, white background with black text
- Removed paper emoji from button text
- Made button smaller with reduced padding (0.8em 1.8em) and font size (1.1em)
- Changed default state to white background with black text and light gray border
- Added hover effect: white background turns red, black text turns white
- Maintained smooth transitions and lift animation on hover
- Updated shadow styling to match new color scheme

--- a/index.html
+++ b/index.html
@@ -566,8 +566,8 @@
 									
 									<!-- View Resume Link -->
 									<div style="text-align: center; margin-top: 3em; padding-top: 2em; border-top: 2px solid #f0f0f0;">
-										<a href="https://drive.google.com/file/d/1uPV1EGUfNIZ0xv-ecaTi7ER3fZkdeiqN/view?usp=sharing" target="_blank" style="display: inline-block; background: #f56a6a; color: white; padding: 1.2em 2.5em; border-radius: 30px; text-decoration: none; font-size: 1.3em; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; transition: all 0.2s ease; box-shadow: 0 4px 15px rgba(245, 106, 106, 0.3);" onmouseover="this.style.background='#e55a5a'; this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(245, 106, 106, 0.4)'" onmouseout="this.style.background='#f56a6a'; this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(245, 106, 106, 0.3)'">
-											📄 View Full Resume
+										<a href="https://drive.google.com/file/d/1uPV1EGUfNIZ0xv-ecaTi7ER3fZkdeiqN/view?usp=sharing" target="_blank" style="display: inline-block; background: white; color: black; border: 2px solid #ddd; padding: 0.8em 1.8em; border-radius: 25px; text-decoration: none; font-size: 1.1em; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; transition: all 0.2s ease; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);" onmouseover="this.style.background='#f56a6a'; this.style.color='white'; this.style.borderColor='#f56a6a'; this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(245, 106, 106, 0.3)'" onmouseout="this.style.background='white'; this.style.color='black'; this.style.borderColor='#ddd'; this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 8px rgba(0, 0, 0, 0.1)'">
+											View Full Resume
 										</a>
 									</div>
 								</section>
