--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 										
 										<!-- Professional Skills Section -->
 										<div id="skills-content" class="resume-section" style="display: none; padding: 2em; border: 2px solid #f56a6a; border-radius: 10px; background: rgba(245, 106, 106, 0.05);">
-											<h3 style="color: #f56a6a; margin-bottom: 1em;">Skills, Languages, & Dev Tools</h3>
+											<h3 style="color: #f56a6a; margin-bottom: 1em;">Professional Skills</h3>
 											<div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; gap: 1.5em;">
 												<div>
 													<h4 style="margin-bottom: 1em; color: #333;">Languages</h4>
