--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 									<div class="resume-content">
 										<!-- Experience Section (Default Active) -->
 										<div id="experience-content" class="resume-section active" style="display: block; padding: 2em; border: 2px solid #f56a6a; border-radius: 10px; background: rgba(245, 106, 106, 0.05);">
-											<h3 style="color: #f56a6a; margin-bottom: 1em;">Relevant Experience</h3>
+											<h3 style="color: #f56a6a; margin-bottom: 1em;">Relevant Experiences</h3>
 											<div style="margin-bottom: 2em;">
 												<div style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 0.5em;">
 													<h4 style="margin: 0; color: #333;">Software Engineering Intern</h4>
