Link Football Match Predictor to GitHub repository
- Updated both image and GitHub icon links to point to NFL_match_predictor repo
- Both the project image and GitHub icon now properly link to the repository
- Maintains consistent linking pattern with other projects

--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
 											<p>Developed a full-stack poker web application with AI bots at multiple difficulty levels using Node.js/Express and Socket.IO for real-time gameplay. Engineered intelligent bot strategies utilizing hand strength analysis, pot odds calculations, and positional awareness to create challenging opponents.</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/football-predictor.svg" alt="Football Match Predictor Project" /></a>
-											<h3 style="display: flex; justify-content: space-between; align-items: center;">Football Match Predictor <a href="#" target="_blank" class="icon brands fa-github" style="font-size: 1.2em; color: #666;"></a></h3>
+											<a href="https://github.com/Vin916/NFL_match_predictor" target="_blank" class="image"><img src="images/football-predictor.svg" alt="Football Match Predictor Project" /></a>
+											<h3 style="display: flex; justify-content: space-between; align-items: center;">Football Match Predictor <a href="https://github.com/Vin916/NFL_match_predictor" target="_blank" class="icon brands fa-github" style="font-size: 1.2em; color: #666;"></a></h3>
 											<p>Engineered an end-to-end machine learning pipeline using XGBoost, Decision Trees, and Random Forest on historical NFL data to predict game outcomes with high accuracy. Deployed a Flask-based REST API delivering real-time win probabilities and score forecasts, with optimized performance through advanced feature engineering and hyperparameter tuning.</p>
 										</article>
 									</div>
