--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 											<p>Developed a full-stack poker web application with AI bots at multiple difficulty levels using Node.js/Express and Socket.IO for real-time gameplay. Engineered intelligent bot strategies utilizing hand strength analysis, pot odds calculations, and positional awareness to create challenging opponents.</p>
 										</article>
 										<article>
-											<a href="https://github.com/Vin916/Cache-Simulator" target="_blank" class="image"><img src="images/cache-simulator.svg" alt="Cache Simulator Project" /></a>
+											<a href="https://github.com/Vin916/Cache-Simulator" target="_blank" class="image"><img src="images/Free SVG Converter (1) copy.svg" alt="Cache Simulator Project" /></a>
 											<h3 style="display: flex; justify-content: space-between; align-items: center;">Cache Simulator <a href="https://github.com/Vin916/Cache-Simulator" target="_blank" class="icon brands fa-github" style="font-size: 1.2em; color: #666;"></a></h3>
 											<p>Built a high-performance cache simulator in C implementing LRU, FIFO, and random replacement algorithms with configurable architectures. Developed comprehensive performance analysis tools to optimize cache hit rates and memory access patterns for computer systems.</p>
 										</article>
