--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				width: 100%;
 				height: 250px;
 				object-fit: cover;
-				object-position: center top;
+				object-position: center 30%;
 			}
 			/* Resume button hover effects - red background with white text/border */
 			.resume-button:hover {
