Change image fit to show full SVG content
- Changed from object-fit: cover to object-fit: contain
- This will show the entire SVG without cropping any parts
- Should display both the chip at top and purple 'Cache Simulator' text at bottom
- Ensures the full design is visible within the 250px container

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 			.posts article .image img {
 				width: 100%;
 				height: 250px;
-				object-fit: cover;
-				object-position: center 30%;
+				object-fit: contain;
+				object-position: center;
 			}
 			/* Resume button hover effects - red background with white text/border */
 			.resume-button:hover {
