Revert to cover and adjust positioning slightly lower
- Changed back to object-fit: cover for consistent styling
- Moved positioning from 30% to 40% to show more of the bottom
- Should reveal the purple 'Cache Simulator' text while keeping the chip visible
- Fine-tuned positioning based on user feedback

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 			.posts article .image img {
 				width: 100%;
 				height: 250px;
-				object-fit: contain;
-				object-position: center;
+				object-fit: cover;
+				object-position: center 40%;
 			}
 			/* Resume button hover effects - red background with white text/border */
 			.resume-button:hover {
